feat: add components

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/bg_image.jpg
+    - assets/images/bg_image_2.jpg
+    - assets/images/logo.png
+    - assets/images/example_art.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
