--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   get:
   google_fonts: ^3.0.1
   simple_shadow: ^0.3.0
-  url_launcher: ^6.1.2
+  shimmer: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -68,6 +68,10 @@ flutter:
     - assets/images/creator.png
     - assets/icons/linkedin.png
     - assets/images/example_art.png
+    - assets/images/library.png
+    - assets/images/music.png
+    - assets/images/books.png
+    - assets/images/writer.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
