--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts:
   simple_shadow: ^0.3.0
   flutter_svg: ^1.1.0
+  flutter_sinusoidals:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -65,6 +66,7 @@ flutter:
     - assets/images/bg_image_2.jpg
     - assets/images/logo.png
     - assets/images/art_girl.png
+    - assets/images/statue.png
     - assets/images/dj.svg
     - assets/images/artist.svg
     - assets/images/crypto.svg
