--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   get:
   google_fonts:
   simple_shadow: ^0.3.0
+  universal_html: ^2.0.8
   flutter_svg: ^1.1.0
+  url_launcher: 
   flutter_sinusoidals:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
