feat: add describe

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: deebx_gh_page
-description: A new Flutter project.
+description: Unindo arte e benefícios exclusivos.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
